src/test/ui/associated-types/trait-with-supertraits-needing-sized-self.stderr
error[E0277]: the size for values of type `Self` cannot be known at compilation time
  --> $DIR/trait-with-supertraits-needing-sized-self.rs:4:22
   |
LL | trait ArithmeticOps: Add<Output=Self> + Sub<Output=Self> + Mul<Output=Self> + Div<Output=Self> {}
   |                      ^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
  ::: $DIR/trait-with-supertraits-needing-sized-self.rs:75:15
   |
LL | pub trait Add<Rhs = Self> {
   |               ^^^ required by this bound in `Add`
   |
